# Codetune

./: .gitignore  DEEP_DIVE.md  PLAYGROUND_DESIGN.md  PROGRESS.md  README.md  RESULTS.md  pyproject.toml
backend/: .env.example  config.py  main.py  render.yaml  requirements.txt
bench/: analyze.py  benchmark.py  prompts.json
configs/: bench_config.yaml  eval_config.yaml  train_config.yaml  train_config_v2.yaml  train_config_v3.yaml
data/: prepare_dataset.py  prepare_dataset_v2.py  prepare_dataset_v3.py
eval/: compare.py  run_all.py  runner.py
evals/: v3_function_calling.yaml
notebooks/: tooltune_training.ipynb
playground/: __init__.py  _build_v2_data.py  app.py  build_showcase.py  server.py
results/: compare_all.py
scripts/: base_eval_final.sh  capture_demo_gif.py  download_model.sh  gen_grpo_v2_traces.py  generate_prep_doc.py  merge_sft.py  quick_eval.py  quick_eval2.py  run_all.sh  run_full_pipeline.sh  run_tooltune_pipeline.sh  run_training_v2.sh  run_v3_pipeline.sh  setup_gcp.sh
serve/: deploy_llamacpp.py  deploy_sglang.py  deploy_vllm.py  quantize.py
tasks/: generate_tasks.py  generate_v3_tasks.py  tier1_single_tool.json  tier2_restraint.json  tier3_multi_step.json  tier4_error_recovery.json  v3_tasks.py  v3_tier1.json  v3_tier2.json  v3_tier3.json  v3_tier4.json
tools/: __init__.py  calculator.py  code_executor.py  codebase_search.py  file_reader.py  log_search.py  registry.py  run_tests.py  search_docs.py  sql_query.py  unit_converter.py  v2_registry.py  weather.py  wikipedia.py
tooltune/: __init__.py  contracts.py  io.py  paths.py  (+1 more)
(+138 files in other folders)
