[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codetune"
version = "0.1.0"
description = "End-to-end pipeline for fine-tuning, evaluating, and serving a coding LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.43.0",
    "numpy",
    "pandas",
    "tqdm",
    "pyyaml",
    "rich",
]

[project.optional-dependencies]
quantize = [
    "auto-gptq>=0.7.0",
    "autoawq>=0.2.0",
]
serve = [
    "vllm>=0.4.0",
]
eval = [
    "evalplus",
]
bench = [
    "aiohttp",
]
logging = [
    "wandb",
]
all = [
    "codetune[quantize,serve,eval,bench,logging]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
